old/k8s/infrastructure/envoy/config/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                stream_idle_timeout: 0s
                route_config:
                  name: grpc_routes
                  virtual_hosts:
                    - name: grpc_local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/loginservice.LoginService" }
                          route:
                            cluster: authorization-service-cluster
                            max_grpc_timeout: 0s
                        - match: { prefix: "/executionvenue.ExecutionVenue" }
                          route:
                            cluster: order-router-cluster
                            max_grpc_timeout: 0s
                        - match:
                            { prefix: "/marketdataservice.MarketDataService" }
                          route:
                            cluster: market-data-service-cluster
                            max_grpc_timeout: 0s
                        - match:
                            { prefix: "/orderdataservice.OrderDataService" }
                          route:
                            cluster: order-data-service-cluster
                            max_grpc_timeout: 0s
                        - match:
                            { prefix: "/staticdataservice.StaticDataService" }
                          route:
                            cluster: static-data-service-cluster
                            max_grpc_timeout: 0s
                        - match: { prefix: "/ordermonitor.OrderMonitor" }
                          route:
                            cluster: order-monitor-cluster
                            max_grpc_timeout: 0s
                        - match:
                            {
                              prefix: "/clientconfigservice.ClientConfigService",
                            }
                          route:
                            cluster: client-config-service-cluster
                            max_grpc_timeout: 0s
                      cors:
                        allow_origin:
                          - "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,user-name,app-instance-id,auth-token
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.cors
                  - name: envoy.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext-authz
                        timeout: 0.5s
                  - name: envoy.grpc_web
                  - name: envoy.router

  clusters:
    - name: opentp-client-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: opentp-client-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opentp-client.default
                      port_value: 80

    - name: authorization-service-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: authorization-service-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: authorization-service.default
                      port_value: 50551

    # ... [similar cluster configurations for other services]

    - name: ext-authz
      connect_timeout: 0.25s
      type: STRICT_DNS
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: ext-authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: authorization-service.default
                      port_value: 4000
